# calendar_dingtalk_client

./: .env  Dockerfile  README.md  deploy_to_server.sh  docker-compose.yml  fix_docker_compose.sh  pyproject.toml
docker.version/: .env.example  API_DOCS.md  Dockerfile  README.md  SYNC_CHECKLIST.md  diagnose.sh  docker-compose.yml  generate_openapi_schema.py  install_deps.sh  requirements.txt  run.sh
docker.version/api_schema/: index.html  openapi.json  openapi.yaml
docker.version/src/calendar_dingtalk_client/: __init__.py  http_server.py  mcp_server.py
docker.version/src/calendar_dingtalk_client/caldav/: __init__.py  client.py
docker.version/src/calendar_dingtalk_client/icalendar/: builder.py  parser.py
mcp.version/: .env.example  README.md  pyproject.toml
mcp.version/src/calendar_dingtalk_mcp/: __init__.py  mcp_server.py
mcp.version/tests/: test_mcp_server.py
src/calendar_dingtalk_client/: cli.py  config.py
src/calendar_dingtalk_client/caldav/: client.py  client.py.backup
tests/unit/: test_config.py
