[project]
name = "calendar-dingtalk-mcp"
version = "0.1.0"
description = "MCP server for DingTalk CalDAV Calendar"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.2",
    "httpx>=0.28.1",
    "icalendar>=6.3.2",
    "lxml>=6.0.2",
    "mcp[cli]>=1.2.0",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
dingtalk-mcp-server = "calendar_dingtalk_mcp.mcp_server:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
